[gd_scene load_steps=10 format=3 uid="uid://bksuq1h2yxxu8"]

[ext_resource type="Texture2D" uid="uid://bpeo3rjvapbl7" path="res://sprites/broken_box.png" id="1_bypwj"]
[ext_resource type="Script" uid="uid://cpn5483r7jh8v" path="res://scripts/broken_block.gd" id="1_e12t1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e12t1"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_31fco"]
atlas = ExtResource("1_bypwj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hcch"]
atlas = ExtResource("1_bypwj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v0av"]
atlas = ExtResource("1_bypwj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4bv7"]
atlas = ExtResource("1_bypwj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_roaww"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31fco")
}],
"loop": true,
"name": &"broken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hcch")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v0av")
}],
"loop": true,
"name": &"destroyed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4bv7")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bypwj"]
size = Vector2(12, 1)

[node name="brokenBlock" type="StaticBody2D"]
z_index = -1
collision_mask = 2
script = ExtResource("1_e12t1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e12t1")
one_way_collision = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_roaww")
animation = &"falling"
autoplay = "default"
frame_progress = 0.84335256

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_bypwj")
debug_color = Color(0.8625912, 0.2628644, 0.6241681, 0.41960785)

[node name="BrokenTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="BrokenTimer" to="." method="_on_broken_timer_timeout"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_destroyed_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
